These tests all assume console.log is available in order to function properly.
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1724 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/api.html
+++ b/fl5/js/test/examples/api.html
@@ -50,7 +50,7 @@
 				if (document.getElementById(valueid) && document.getElementById(valueid).value !== "") {
 					player[document.getElementById(functionid).value](document.getElementById(valueid).value);
 				} else {
-					console.log(player[document.getElementById(functionid).value]());
+					if (console && console.log) console.log(player[document.getElementById(functionid).value]());
 				}
 			}
             
