These tests all assume console.log is available in order to function properly.
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1725 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/apiunittesteventsdynamic.html
+++ b/fl5/js/test/examples/apiunittesteventsdynamic.html
@@ -200,7 +200,7 @@
             		}, 500);
             	} else {
             		document.getElementById("result").innerHTML = "Error at step " + (scriptPos + 1) + ": Got " + script[scriptPos].getter() + " and expected " + script[scriptPos].expectedValue;
-            		if (console && console.log) console.log(script[scriptPos].action);
+            		if (window.console && console.log) console.log(script[scriptPos].action);
             	}
             }
 			
