--- a/fl5/js/test/examples/playlistparsing.html
+++ b/fl5/js/test/examples/playlistparsing.html
@@ -36,7 +36,7 @@
         <script type="text/javascript">
             var examplestable = document.getElementById("examplestable");
 			jwplayer.utils.ajax(config.playlist, function(xmlhttp){
-				if (console && console.log) {
+				if (window.console && console.log) {
 					console.log(jwplayer.utils.parsers);
 					console.log(jwplayer.utils.parsers.parserfactory);
 					console.log(jwplayer.utils.parsers.parserfactory.getParser(xmlhttp.responseXML.childNodes[0]));
