--- a/fl5/js/test/examples/api.html
+++ b/fl5/js/test/examples/api.html
@@ -50,7 +50,7 @@
 				if (document.getElementById(valueid) && document.getElementById(valueid).value !== "") {
 					player[document.getElementById(functionid).value](document.getElementById(valueid).value);
 				} else {
-					if (console && console.log) console.log(player[document.getElementById(functionid).value]());
+					if (window.console && console.log) console.log(player[document.getElementById(functionid).value]());
 				}
 			}
             
