--- a/fl5/js/test/examples/apiunittestmute.html
+++ b/fl5/js/test/examples/apiunittestmute.html
@@ -172,7 +172,7 @@
             		}, 250);
             	} else {
             		document.getElementById("result").innerHTML = "Error at step " + (scriptPos + 1) + ": Got " + script[scriptPos].getter() + " and expected " + script[scriptPos].expectedValue;
-            		if (console && console.log) console.log(script[scriptPos].action);
+            		if (window.console && console.log) console.log(script[scriptPos].action);
             	}
             }
         </script>
