--- a/fl5/js/test/examples/listeners.html
+++ b/fl5/js/test/examples/listeners.html
@@ -71,7 +71,7 @@
             
             function forward(id) {
             	return function(evt) {
-            		if (console && console.log) console.log(evt);
+            		if (window.console && console.log) console.log(evt);
             		var result = "";
             		var properties = events[id];
             		if (jwplayer.utils.typeOf(properties) == "string") {
