--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -44,7 +44,7 @@
             			"Single MP4": "single_mp4.html",
             			"Single OGV": "single_ogg.html",
             			"YouTube": "youtube.html",
-            			"Multiple sources (MP4 and OGV)": "mp4_ogg.html",
+            			"Multiple sources (MP4 and OGV)": "mp4_ogv.html",
             			"Bitrate switching": "bitrateswitching.html",
             			"RTMP": "rtmp.html"
             		}
