--- a/fl5/js/test/examples/components.html
+++ b/fl5/js/test/examples/components.html
@@ -22,8 +22,8 @@
         <p>
             This test the various configuration options for plugins. Video should play natively on FF, Chrome, Safari, and Opera but will fail in IE.
         </p>
-        <table id="examplestable">
-        </table>
+        <div id="examplestable">
+        </div>
         <script type="text/javascript">
             var examplestable = document.getElementById("examplestable");
             var players = [["flash", "html5", "download"], ["flash", "download"], ["html5", "download"]];
@@ -179,9 +179,9 @@
             	if (isNaN(test)) {
             		break;
             	}
-            	var row = document.createElement("tr");
+            	var row = document.createElement("div");
             	examplestable.appendChild(row);
-            	var label = document.createElement("td");
+            	var label = document.createElement("p");
             	row.appendChild(label);
             	var labelTag = document.createElement("h2");
             	label.appendChild(labelTag);
@@ -190,7 +190,7 @@
             		if (isNaN(player)) {
             			break;
             		}
-            		var column = document.createElement("td");
+            		var column = document.createElement("span");
             		row.appendChild(column);
             		var div = document.createElement("div");
             		column.appendChild(div);
