Fixes a bug when trying to load non-existing URLs from JS Dock buttons
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1737 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -47,6 +47,10 @@
             			"Multiple sources (MP4 and OGV)": "mp4_ogv.html",
             			"Bitrate switching": "bitrateswitching.html",
             			"RTMP": "rtmp.html"
+            		},
+            		"Audio codecs": {
+            			"Single MP3": "single_mp3.html",
+            			"Single OGG (Vorbis)": "single_ogg.html"
             		}
             	},
             	"Configuration Tests": {
