--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -170,10 +170,11 @@
             	"Player 5.6": {
             		"Bugs": {
             			"Switching HTTP mediaprovider": "switchhttp.html",
-            			"Mixed plugin locations": "mixedpluginlocations.html"
+            			"Mixed plugin locations": "mixedpluginlocations.html",
+						"HTTP Startparam" : "configdeserializer.html"
             		},
             		"Features": {
-            		    "Enchanced tabbing capabilities": "tabbing.html", 
+            		    "Enchanced tabbing capabilities": "tabbing.html"
             		}
             	}
             };
