Adding a couple more test cases
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1766 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -73,7 +73,8 @@
             		"Components": {
             			"Controlbar": "controlbar.html",
             			"Logo": "logo.html",
-            			"Dock": "dock.html"
+            			"Dock": "dock.html",
+            			"Playlist": "playlistcomponent.html"
             		},
             		"Plugins": {
 						"Plugin strings": "pluginstrings.html",
@@ -174,7 +175,8 @@
 						"HTTP Startparam" : "configdeserializer.html"
             		},
             		"Features": {
-            		    "Enchanced tabbing capabilities": "tabbing.html"
+            		    "Enchanced tabbing capabilities": "tabbing.html",
+		 	    "Display.showmute": "showmute.html"
             		}
             	}
             };
