Fixing bug in embedder plugin loading which stripped version numbers from js stub ([ticket:1309])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1768 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -172,7 +172,8 @@
             		"Bugs": {
             			"Switching HTTP mediaprovider": "switchhttp.html",
             			"Mixed plugin locations": "mixedpluginlocations.html",
-						"HTTP Startparam" : "configdeserializer.html"
+						"HTTP Startparam" : "configdeserializer.html",
+						"Versioned JS Plugins" : "versionedplugins.html"
             		},
             		"Features": {
             		    "Enchanced tabbing capabilities": "tabbing.html",
