--- a/fl5/js/test/examples/versionedplugins.html
+++ b/fl5/js/test/examples/versionedplugins.html
@@ -17,10 +17,18 @@
             To test, make sure Captions version 2 (captions-2h.swf) is loaded correctly; including JS stub (captions-2.js)
         </p>
         <div>
+        	<h2>Repository plugin</h2>
             <div id="player">
                 Flash Player should replace this.
             </div>
-            <p id="text">This text should be after the player</p>
+        	<h2>Absolute URL plugin (js)</h2>
+            <div id="player2">
+                Flash Player should replace this.
+            </div>
+        	<h2>Absolute URL plugin (swf)</h2>
+            <div id="player3">
+                Flash Player should replace this.
+            </div>
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
@@ -35,6 +43,38 @@
                 plugins: {
                     'captions-2': {
                         file: "http://playertest.longtailvideo.com/corrie.srt"   
+                    }
+                } 
+            });
+
+            jwplayer("player2").setup({
+            	players: settings.players(window.location.href, ["flash","html5","download"]),
+                levels: [
+                	{ file:'http://playertest.longtailvideo.com/corrie.mp4' },
+                	{ file:'http://playertest.longtailvideo.com/corrie.ogv' }
+                ],
+               	image: "http://playertest.longtailvideo.com/corrie.jpg",
+                height: "270",
+                width: "480",
+                plugins: {
+                    'http://plugins.longtailvideo.com/5/hd/hd-1.js': {
+                        file: "http://playertest.longtailvideo.com/bunny.mp4"   
+                    }
+                } 
+            });
+            
+            jwplayer("player3").setup({
+            	players: settings.players(window.location.href, ["flash","html5","download"]),
+                levels: [
+                	{ file:'http://playertest.longtailvideo.com/corrie.mp4' },
+                	{ file:'http://playertest.longtailvideo.com/corrie.ogv' }
+                ],
+               	image: "http://playertest.longtailvideo.com/corrie.jpg",
+                height: "270",
+                width: "480",
+                plugins: {
+                    'http://plugins.longtailvideo.com/5/sharing/sharing-1.swf': {
+                        link: "http://www.longtailvideo.com"   
                     }
                 } 
             });
