Cleans up javascript null / undefined comparisons
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1799 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/badfile.html
+++ b/fl5/js/test/examples/badfile.html
@@ -24,11 +24,11 @@
             jwplayer("player").setup({
             	players: settings.players(window.location.href),
             	levels: [{
-            		file: "http://playertest.longtailvideo.com/bunny1.mp4"
+            		file: "http://localhost/bunny1.mp4"
             	}, {
-            		file: "http://playertest.longtailvideo.com/bunny1.ogv"
+            		file: "http://localhost/bunny1.ogv"
             	}],
-            	image: "http://playertest.longtailvideo.com/bunny1.jpg"
+            	image: "http://localhost/bunny1.jpg"
             });
         </script>
         <h3>HTML code</h3>
