* Fixes playlist repeat options (''single'',''list'',''always'') in HTML5 mode on iOS Safari ([ticket:1320])  * Fixes issue where the first frame of a video would be repeated in HTML5 mode on iOS ([ticket:1313])  * Fixes a bug where the fullscreen button results in an error in HTML5 mode in IE9 ([ticket:1345])  * Fixes a bug where the player could attempt to play an RTMP item with the Sound media provider ([ticket:1340])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1816 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/apiunittestplay.html
+++ b/fl5/js/test/examples/apiunittestplay.html
@@ -12,7 +12,10 @@
             document.write("<h1>" + document.title + "</h1>");
         </script>
         <p>
-            This tests adding listeners to the player and responding to events. Video should play on FF, Chrome, Safari, and Opera but will fail in IE.
+            This tests adding listeners to the player and responding to events. Video should play on FF, Chrome, Safari, and Opera but will fail in IE 8 and below.
+        </p>
+        <p>
+        	This test should also fail in iOS, since volume is not settable via JavaScript for iOS devices.
         </p>
         <div height="270" id="player" width="480">
         </div>
