* Fixes a bug where stop buttons aren't rendered in HTML5 ([ticket:1300])  * Fixes a bug where setting the 'dock' option to a boolean isn't accepted ([ticket:1325])  * Fixes a bug where properties with dashes could cause JavaScript errors ([ticket:1353])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1824 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/custom_skin.html
+++ b/fl5/js/test/examples/custom_skin.html
@@ -64,8 +64,8 @@
             	}, {
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-            	skin: "../../../../../skins/classic/classic.xml"
+//            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            	skin: "../../../../../tags/skins/classic/classic.xml"
             });
         </script>
         <p>
@@ -119,7 +119,7 @@
             		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
             	}],
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
-            	skin: "../../../../../skins/grungetape/grungetape.xml"
+            	skin: "../../../../../tags/skins/grungetape/grungetape.xml"
             });
         </script>
         <p>
