* Adds .oga extension ([ticket:1356])  * Fixes controlbar positioning ([ticket:1355])  * Adds several test cases  * Fixes a bug introduced in [1824] which broke HTML5 mode
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1831 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -74,7 +74,10 @@
             			"Controlbar": "controlbar.html",
             			"Logo": "logo.html",
             			"Dock": "dock.html",
-            			"Playlist": "playlistcomponent.html"
+            			"Playlist": {
+            		    "Playlist Component": "playlistcomponent.html",
+            		    "Playlist with iScroll (iOS Only)": "playlistiscroll.html"
+            		  }
             		},
             		"Plugins": {
 						"Plugin strings": "pluginstrings.html",
@@ -177,9 +180,16 @@
             		},
             		"Features": {
             		    "Enchanced tabbing capabilities": "tabbing.html",
-		 	    "Display.showmute": "showmute.html"
+          		 	    "Display.showmute": "showmute.html"
             		}
-            	}
+            	},
+            	"Player 5.7": {
+            		"Bugs": {
+            		},
+            		"Features": {
+            			"image.duration": "imageduration.html"
+            	  }
+              }
             };
             
             function createList(examples, parentDOM) {
