--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -68,7 +68,7 @@
             			"Progressive video + audio": "playlist.html?type=audio",
             			"RTMP": "playlist.html?type=rtmp",
             			"Mixed": "playlist.html?type=mixed",
-            			"XML Playlits": "xmlplaylists.html"
+            			"XML Playlist": "xmlplaylists.html"
             		},
             		"Components": {
             			"Controlbar": "controlbar.html",
