--- a/fl5/js/test/examples/xmlplaylists.html
+++ b/fl5/js/test/examples/xmlplaylists.html
@@ -2,16 +2,7 @@
 <html>
     <head>
         <title>XML playlists</title>
-        <script type="text/javascript" src="../../bin-debug/jwplayer.js">
-        </script>
-        <script src="https://www.google.com/jsapi?key=ABQIAAAAmW4wY4GLARKwRKxx1EY4dxTCwYuWkdD_iTnqF3uxU7_DebvfxBREab8CD-MRcuvG-IzP2uSZrQpweg" type="text/javascript">
-        </script>
-        <script language="Javascript" type="text/javascript">
-            google.load("ext-core", "3");
-            google.load("dojo", "1");
-            google.load("prototype", "1");
-            google.load("mootools", "1.3.0");
-        </script>
+        <script type="text/javascript" src="../../bin-debug/jwplayer.js"></script>
         <script type="text/javascript" src="settings.js">
         </script>
     </head>
@@ -26,12 +17,39 @@
         </table>
         <script type="text/javascript">
             var examplestable = document.getElementById("examplestable");
-            var players = [["flash", "html5", "download"], ["flash", "download"], ["html5", "download"]];
+            var players = [["flash", "html5", "download"], ["html5", "download"]];
             var tests = [{
-            	name: "MRSS playlist",
+            	name: "MRSS playlist (playlistfile)",
             	config: {
-					file: "http://playertest.longtailvideo.com/mrss.xml",
-            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+    			   		playlistfile:"assets/mrss.xml",
+    			   		skin: "http://localhost/skins/glow/glow.zip",
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		'playlist.position': "right",
+            		'playlist.size': "180",
+            		width: 480,
+            		height: 280
+            	}
+            },{
+            	name: "MRSS playlist (file)",
+            	config: {
+    			   		file:"assets/mrss.xml",
+    			   		skin: "http://localhost/skins/glow/glow.zip",
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		'playlist.position': "right",
+            		'playlist.size': "180",
+            		width: 480,
+            		height: 280
+            	}
+            },{
+            	name: "MRSS playlist (first playlist item)",
+            	config: {
+    			   		playlist: [{file:"assets/mrss.xml"}],
+    			   		skin: "http://localhost/skins/glow/glow.zip",
+            		image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            		'playlist.position': "right",
+            		'playlist.size': "180",
+            		width: 480,
+            		height: 280
             	}
             }];
             
@@ -65,6 +83,7 @@
             		var setup = jwplayer(playerName).setup(config);
             	}
             }
+            
         </script>
         <h3>HTML code</h3>
     </body>
