Adds test case for show/hide events.  Also fixes a couple of related bugs.
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1843 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -187,7 +187,8 @@
             		"Bugs": {
             		},
             		"Features": {
-            			"image.duration": "imageduration.html"
+            			"image.duration": "imageduration.html",
+            			"Show and Hide events": "showhide.html"
             	  }
               }
             };
