Fixes several stability issues in the release candidate
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1858 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/apiunittesteventssetup.html
+++ b/fl5/js/test/examples/apiunittesteventssetup.html
@@ -115,7 +115,9 @@
             var scriptPos = -1;
             jwplayer().onTime(startScript);
             jwplayer().onComplete(completeScript);
-            jwplayer().play();
+            if (!jwplayer.utils.isIOS()) {
+	            jwplayer().play();
+            }
             
             var script = [{
             	action: function() {
