--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -42,7 +42,7 @@
             		},
             		"Video codecs": {
             			"Single MP4": "single_mp4.html",
-            			"Single OGV": "single_ogg.html",
+            			"Single OGV": "single_ogv.html",
             			"YouTube": "youtube.html",
             			"Multiple sources (MP4 and OGV)": "mp4_ogv.html",
             			"Bitrate switching": "bitrateswitching.html",
