--- a/fl5/js/test/examples/playlist.html
+++ b/fl5/js/test/examples/playlist.html
@@ -319,8 +319,7 @@
             	players: settings.players(window.location.href),
             	playlist: playlist,
             	repeat: "always",
-            	shuffle: true,
-            	debug: "console"
+            	shuffle: true
             });
         </script>
         <p>
