--- a/fl5/js/test/examples/single_mp4.html
+++ b/fl5/js/test/examples/single_mp4.html
@@ -19,7 +19,7 @@
         </div>
         <script type="text/javascript">
             jwplayer("player").setup({
-            	players: settings.players(window.location.href),
+            	players: settings.modes.html5only,
             	file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
             	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
             });
