Fixing absolute path links in plugin tests
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1859 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -84,8 +84,8 @@
 						"Loading and Configuration" : {
 							"Local": {
 								"Absolute referenced": {
-									"JavaScript": "plugins.html?"+escape('var config = {title:"Absolute Path - JavaScript", plugins:{"http://developer.longtailvideo.com/player/trunk/fl5/js/test/examples/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
-									"Flash":"plugins.html?"+escape('var config = {title:"Absolute Path - Flash", plugins:{"http://developer.longtailvideo.com/player/trunk/fl5/js/test/examples/plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
+									"JavaScript": "plugins.html?"+escape('var config = {title:"Absolute Path - JavaScript", plugins:{"http://playertest.longtailvideo.com/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
+									"Flash":"plugins.html?"+escape('var config = {title:"Absolute Path - Flash", plugins:{"http://playertest.longtailvideo.com/plugins/hd.swf":{"file":"http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"}}}')
 								},
 								"Root referenced": {
 									"JavaScript": "plugins.html?"+escape('var config = {title:"Root Path - JavaScript", plugins:{"/player/trunk/fl5/js/test/examples/plugins/textplugin.js":{text:"Plugin successfully loaded!"}}}'),
