Fixes an issue with skins and iScroller / iOS playlist scrolling
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1862 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/docksetbutton.html
+++ b/fl5/js/test/examples/docksetbutton.html
@@ -66,10 +66,10 @@
             function addButton() {
             	index++;
             	var name = "button" + index;
-            	player.getPlugin("dock").setButton(name, function() {
+            	var dock = player.getPlugin("dock");
+            	dock.setButton(name, function() {
 					setAlert(name);
-				}
-				, "assets/dock_on_out.png");
+				}, "assets/dock_on_out.png");
             };
             function removeButton() {
             	var name = "button" + index;
