--- a/fl5/js/test/examples/logo.html
+++ b/fl5/js/test/examples/logo.html
@@ -49,7 +49,7 @@
             });
         </script>
 		<h2>
-			Modified logo, top right
+			Modified logo, top right, hiding set to false (Boolean)
 		</h2>
 		<div height="270" id="player3" width="480">
         </div>
@@ -65,6 +65,25 @@
             	'logo.file': "http://www.dumbview.com/images/dv.jpg",
             	'logo.position': "top-right",
             	'logo.hide': false
+            });
+        </script>
+		<h2>
+			Modified logo, top right, hiding set to "false" (String)
+		</h2>
+		<div height="270" id="player4" width="480">
+        </div>
+        <script type="text/javascript">
+            jwplayer("player4").setup({
+            	players: settings.players(window.location.href),
+            	levels: [{
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4"
+            	}, {
+            		file: "http://content.bitsontherun.com/videos/gSzpo2wh-604476.ogv"
+            	}],
+            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg",
+            	'logo.file': "http://www.dumbview.com/images/dv.jpg",
+            	'logo.position': "top-right",
+            	'logo.hide': "false"
             });
         </script>
         <h3>HTML code</h3>
