Fixes an issue on iOS where a second playlist item's duration defaults to the previous item's duration ([ticket:1379])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1877 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/api.html
+++ b/fl5/js/test/examples/api.html
@@ -45,7 +45,7 @@
             </p>
             <select id="properties">
             </select>
-			<a href="#" onclick="callPlayerFunction('properties');return false;">Get Value</a>
+			<a href="#" onclick="callPlayerFunction('properties');return false;">Log value to console</a>
         </div>
         <script type="text/javascript">
         var player;
