Fixes two bugs:  * HTML5 volume slider doesn't work after fullscreen toggle [ticket:1344]  * HTML5 player should use error.message instead of error.error for JWPLAYER_ERROR event [ticket:1425]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1945 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/flashvars.html
+++ b/fl5/js/test/flashvars.html
@@ -80,7 +80,8 @@
 				<select id="players">
 					<option value=''></option>
 					<option value='../../player.swf'>v5</option>
-					<option value='../../../../commercial/trunk/player-licensed.swf'>v5c</option>
+					<!--option value='../../../../commercial/trunk/player-licensed.swf'>v5c</option-->
+					<option value='../../../../tags/mediaplayer-5.7/player.swf'>5.7</option>
 					<option value='../../../../tags/mediaplayer-5.6/player.swf'>5.6</option>
 					<option value='../../../../tags/mediaplayer-5.5/player.swf'>5.5</option>
 					<option value='../../../../tags/mediaplayer-5.4/player.swf'>5.4</option>
