Bug fixes:  * Toggle fullscreen in IDLE state in Safari ([ticket:1372])  * JS plugins' resize() function not correctly reported in simulated fullscreen ([ticket:1405])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1952 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/apiunittestfullscreen.html
+++ b/fl5/js/test/examples/apiunittestfullscreen.html
@@ -34,6 +34,7 @@
             
             var scriptPos = -1;
             jwplayer().onTime(startScript);
+            jwplayer().onFullscreen(function(evt){console.log(evt.fullscreen);});
             jwplayer().play();
             
             var script = [{
