Load not calling play when autostart=true for HTML5 mode ([ticket:1473])
git-svn-id: http://developer.longtailvideo.com/svn/trunk@1999 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -190,6 +190,15 @@
             			"image.duration": "imageduration.html",
             			"Show and Hide events": "showhide.html"
             	  }
+              },
+            	"Player 5.8": {
+            		"Bugs": {
+            		  "100% Height / Width (parent is &lt;body&gt;)": "hundredpercent.html"
+            		},
+            		"Features": {
+            			"image.duration": "imageduration.html",
+            			"Show and Hide events": "showhide.html"
+            	  }
               }
             };
             
