--- a/fl5/js/test/flashvars.html
+++ b/fl5/js/test/flashvars.html
@@ -81,6 +81,7 @@
 					<option value=''></option>
 					<option value='../../player.swf'>v5</option>
 					<!--option value='../../../../commercial/trunk/player-licensed.swf'>v5c</option-->
+					<option value='../../../../tags/mediaplayer-5.8/player.swf'>5.8</option>
 					<option value='../../../../tags/mediaplayer-5.7/player.swf'>5.7</option>
 					<option value='../../../../tags/mediaplayer-5.6/player.swf'>5.6</option>
 					<option value='../../../../tags/mediaplayer-5.5/player.swf'>5.5</option>
