Fixes [ticket:1499] and [ticket:1520]
git-svn-id: http://developer.longtailvideo.com/svn/trunk@2024 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -55,6 +55,7 @@
             	},
             	"Configuration Tests": {
 					"Width / Height": "heightwidth.html",
+					"Autostart": "autostart.html",
 					"Providers": "providers.html", 
             		"Multiple players with various options": "multiple_customs.html",
 					"Components + positions": "components.html",
