--- a/fl5/js/test/examples/single_mp4.html
+++ b/fl5/js/test/examples/single_mp4.html
@@ -14,15 +14,28 @@
         <p>
             This sets up a player for IE9, FF, Chrome, Safari, and Opera, however, playback will fail in FF and Opera. IE < 9 will simply display "HTML5 Player should replace this".
         </p>
+        <p>Rendering mode:
+            <select id="renderer">
+              <option value="flashonly"  selected="selected">Flash Only</option>
+              <option value="html5only">HTML5 Only</option>
+            </select>
+			<button id="update" onclick="return setupAll();">Update</button>
+        </p>
+        
         <div height="270" id="player" width="480">
-        	HTML5 Player should replace this
+        	Player should replace this
         </div>
         <script type="text/javascript">
-            jwplayer("player").setup({
-            	players: settings.modes.html5only,
-            	file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
-            	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
-            });
+        	function setupAll() {
+                var mode = document.getElementById('renderer').value;
+
+                jwplayer("player").setup({
+   		         	players: settings.modes[mode],
+   		         	file: "http://content.bitsontherun.com/videos/gSzpo2wh-486405.mp4",
+    	        	image: "http://content.bitsontherun.com/thumbs/gSzpo2wh-480.jpg"
+                });
+	          }
+	          setupAll();
         </script>
         <h3>HTML code</h3>
     </body>
