Implements InStream API ([ticket:644]), by merging [browser:branches/fl5_instream instream] branch
git-svn-id: http://developer.longtailvideo.com/svn/trunk@2049 6bf506d4-4edb-4b42-8bf1-84b36a5c7d31

--- a/fl5/js/test/examples/index.html
+++ b/fl5/js/test/examples/index.html
@@ -199,7 +199,8 @@ ul {
               	},
 	        	"Player 5.9": {
                 	"Features": {
-                		"onBeforePlay Event": "onbeforeplay.html"
+	            		"onBeforePlay Event": "onbeforeplay.html",
+                		"InStream API": "instream.html"
                 	}
                 }
             };
